# Language-Vision-Grounded-Robot-Autonomy

./: .gitignore  README.md  main.py  pyproject.toml
backend/: view_annotated.py
backend/app/: main.py
backend/app/api/routes/: chat.py  localization.py  memory.py  navigation.py  robot.py  system.py  vision.py
backend/app/core/: config.py  dependencies.py  environment_loader.py
backend/app/data/: robot_actions.yaml  vision_labels.yaml
backend/app/data/environments/: small_house.yaml
backend/app/models/: schemas.py
backend/app/scripts/: start_small_house.sh
backend/app/services/: action_mapper.py  environment_service.py  initial_pose_service.py  intent_parser.py  llm_service.py  ros2_bridge.py  sam_clip_perceptor.py  state_store.py  vision_service.py  yaml_registry.py
docs/: index.html
docs/demo/: index.html
frontend/: package-lock.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: chat-panel.tsx  command-buttons.tsx  sidebar.tsx  status-card.tsx  vision-panel.tsx
frontend/src/lib/: api.ts
frontend_backup/app/: layout.tsx  page.tsx
frontend_backup/app/chat/: page.tsx
frontend_backup/app/control/: page.tsx
frontend_backup/app/dashboard/: page.tsx
frontend_backup/app/navigation/: page.tsx
frontend_backup/components/: chat-panel.tsx  command-buttons.tsx  sidebar.tsx  topbar.tsx
frontend_backup/lib/: api.ts
launch/: turtlebot3_my_world.launch.py  turtlebot3_new_world.launch.py  turtlebot3_promzy_world.launch.py
rviz/: promzy_new_world.rviz
worlds/: my_world.world  new_world.world
(+5 files in other folders)
